Fix PR feedback 1)  "Show Server Time Zone" Checkbox Missing for Hourly and Run-Once Conditions' 2) Double Border on parameter-table-shell

--- a/web/projects/portal/src/app/portal/schedule/schedule-task-editor/parameter-table/parameter-table.component.scss
+++ b/web/projects/portal/src/app/portal/schedule/schedule-task-editor/parameter-table/parameter-table.component.scss
@@ -32,7 +32,6 @@ thead, tbody tr {
     border: 1px solid var(--inet-border-color);
     border-radius: 4px;
     overflow: hidden;
-    box-shadow: inset 0 0 0 1px var(--inet-border-color);
     background-color: var(--inet-card-bg-color);
 }
 
